<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserCreateConfirmActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="@dimen/imgSizeSmall"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/action_back"
                    android:scaleType="fitStart"
                    android:src="@drawable/ic_arrow_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lbl_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnBack"
                    app:layout_constraintTop_toTopOf="@+id/btnBack" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/paddingSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_toolbar">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/imgSizeXXLarge"
            android:layout_height="@dimen/imgSizeXXLarge"
            android:contentDescription="@string/title_user_profile_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.bulletinboard.ui.custom.TextOutput
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile"
            app:title="@string/title_name"
            tools:text="@tools:sample/full_names" />

        <com.example.bulletinboard.ui.custom.TextOutput
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_name"
            app:title="@string/title_email"
            tools:text="@string/sample_email" />

        <com.example.bulletinboard.ui.custom.TextOutput
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_email"
            app:title="@string/title_password"
            tools:text="@string/title_password" />

        <com.example.bulletinboard.ui.custom.TextOutput
            android:id="@+id/txt_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_password"
            app:title="@string/title_type"
            tools:text="@string/sample_type" />

        <com.example.bulletinboard.ui.custom.TextOutput
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_type"
            app:title="@string/title_phone"
            tools:text="@tools:sample/us_phones" />

        <com.example.bulletinboard.ui.custom.TextOutput
            android:id="@+id/txt_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_phone"
            app:title="@string/title_dob"
            tools:text="@tools:sample/date/ddmmyy" />

        <com.example.bulletinboard.ui.custom.TextOutput
            android:id="@+id/txt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_dob"
            app:title="@string/title_address"
            tools:text="@tools:sample/lorem[10]" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMedium"
            android:text="@string/action_confirm"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_address" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:text="@string/action_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/btn_submit"
            app:layout_constraintTop_toTopOf="@+id/btn_submit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>