<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.post.PostCreateConfirmActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar_back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/paddingSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar">

        <com.example.bulletinboard.ui.custom.TextOutput
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/title"
            tools:text="@tools:sample/full_names" />

        <com.example.bulletinboard.ui.custom.TextOutput
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            app:title="@string/title_description"
            tools:text="@tools:sample/lorem[10]" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_status"
            style="@style/Output.Text.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMedium"
            android:enabled="false"
            android:text="@string/title_status"
            android:textColor="?attr/colorPrimary"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_description"
            app:switchPadding="@dimen/switchPadding"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMedium"
            android:text="@string/action_confirm"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_status" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:text="@string/action_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/btn_submit"
            app:layout_constraintTop_toTopOf="@+id/btn_submit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>